Maybe a fix for listener registering